--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,19 @@
 name = "AcceleratedTrafficAssignement"
 uuid = "01491a18-7338-4144-984c-5e8a3c91a672"
-authors = ["AntoineBut <antoine.buttier@epfl.ch> and contributors"]
 version = "1.0.0-DEV"
+authors = ["AntoineBut <antoine.buttier@epfl.ch> and contributors"]
+
+[deps]
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
+SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 
 [compat]
+DataStructures = "0.19.1"
+Graphs = "1.13.1"
+KernelAbstractions = "0.9.38"
+SimpleWeightedGraphs = "1.5.0"
 julia = "1.6.7"
 
 [extras]
