--- a/Project.toml
+++ b/Project.toml
@@ -4,19 +4,22 @@ version = "1.0.0-DEV"
 authors = ["AntoineBut <antoine.buttier@epfl.ch> and contributors"]
 
 [deps]
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 FasterShortestPaths = "952f73ac-809b-4467-8cda-03990de1fa90"
+GPUGraphs = "fd5a6e86-c761-4989-bab7-5b3464417f6b"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 
 [compat]
+CUDA = "5.9.2"
 DataStructures = "0.19.1"
 FasterShortestPaths = "0.1.0"
+GPUGraphs = "1.0.0"
 Graphs = "1.13.1"
 SimpleWeightedGraphs = "1.5.0"
-julia = "1.6.7"
 Test = "1.11.0"
-
+julia = "1.6.7"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
