--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,10 @@ Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 
+[sources]
+GPUGraphs = {url = "https://github.com/AntoineBut/GPUGraphs.jl"}
+FasterShortestPaths = {url = "https://github.com/gdalle/FasterShortestPaths.jl"}
+
 [compat]
 DataStructures = "0.19.1"
 FasterShortestPaths = "0.1.0"
