--- a/test/Project.toml
+++ b/test/Project.toml
@@ -10,3 +10,6 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[sources]
+FasterShortestPaths = {url = "https://github.com/gdalle/FasterShortestPaths.jl"}
