--- a/Project.toml
+++ b/Project.toml
@@ -12,8 +12,8 @@ KernelAbstractions = "63c18a36-062a-441e-b654-da1e3ab1ce7c"
 SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 
 [sources]
-GPUGraphs = {url = "https://github.com/AntoineBut/GPUGraphs.jl"}
-FasterShortestPaths = {url = "https://github.com/gdalle/FasterShortestPaths.jl"}
+FasterShortestPaths = {url = "https://github.com/gdalle/FasterShortestPaths.jl#main"}
+GPUGraphs = {url = "https://github.com/AntoineBut/GPUGraphs.jl#main"}
 
 [compat]
 DataStructures = "0.19.1"
